<resources>
    <string name="app_name">Pusillus Grex</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pusillus Grex</string>
    <string name="nav_header_subtitle">Instituto Bom Pastor (IBP/PA)</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Início</string>
    <string name="menu_sermoes">Sermões</string>
    <string name="menu_aulas">Aulas</string>
    <string name="menu_espiritualidade">Espiritualidade</string>
    <string name="menu_liturgia">Liturgia</string>
    <string name="menu_midia">Mídia</string>
    <string name="menu_ibpmundo">IBP pelo Mundo</string>
    <string name="menu_links">Links</string>
    <string name="menu_ajuda">Ajude-nos</string>
    <string name="menu_contato">Contato</string>
    <string name="menu_sobre">Sobre</string>
    <string name="menu_share">Compartilhar</string>
    <string name="menu_send">Enviar</string>

</resources>
